[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/rock_round.png" type="Texture" id=1]
[ext_resource path="res://Boulder.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=14]
radius = 202.0
height = 216.0

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 53.0094

[node name="Boulder" type="Node2D"]
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )
demoralize_force_scale = 3.0
speed = 80

[node name="DemoralizeArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DemoralizeArea"]
position = Vector2( 0, 336 )
shape = SubResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4.3125, 4.3125 )
frames = SubResource( 13 )
frame = 9
playing = true

[node name="KillArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource( 15 )

[connection signal="body_entered" from="DemoralizeArea" to="." method="_on_DemoralizeArea_body_entered"]
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
